# calamity-reactive-loot-affixes

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md
.cursor/rules/: vibekit.md
.github/: copilot-instructions.md
.github/workflows/: ci-verify.yml  vibekit-guard.yml
.vibe/: AGENT_CHECKLIST.md  config.json
.vibe/agent_memory/: DONT_DO_THIS.md
.vibe/brain/: agents_doctor.py  change_coupling.py  check_complexity.py  configure.py  context_db.py  custom_checks.py  doctor.py  impact_analyzer.py  indexer.py  precommit.py  requirements.txt  run_core_tests.py  search.py  summarizer.py
.vibe/context/: PROFILE_GUIDE.md
Data/: CalamityAffixes.esp  CalamityAffixes_DISTR.ini  CalamityAffixes_KID.ini
Data/Scripts/: CalamityAffixes_MCMConfig.pex  CalamityAffixes_ModEventEmitter.pex  CalamityAffixes_ModeControl.pex
affixes/: AGENTS.md  affixes.json  affixes.modules.json  affixes.schema.json  runeword.contract.json
affixes/modules/: keywords.affixes.core.json  keywords.affixes.runewords.json  spec.root.json  (+4 more)
doc/: 2.CK_MVP_셋업_체크리스트.md  3.B_데이터주도_생성기_워크플로우.md  4.현재_구현_어픽스_목록.md  5.룬워드_94개_효과_정리.md  6.아키텍처_분석_리팩터링_디커플링_로드맵.md  6.프리픽스_83개_효과_정리.md
docs/: AFFIX_CATALOG.md  INDEX.md  NEXUS_DESCRIPTION.md  NEXUS_DESCRIPTION_BBCODE.txt  PREFIX_EFFECTS.md  RUNEWORD_EFFECTS.md  SUFFIX_EFFECTS.md  VFX_MATRIX.md  스카이림 바닐라 효과 ARPG 변환 아이디어.md
scripts/: install_hooks.py  precommit_runner.py  setup_vibe_env.py  vibe.cmd  vibe.py  vibe_bootstrap.py  vibekit.cmd  vibekit.py
skse/CalamityAffixes/: AGENTS.md  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
skse/CalamityAffixes/dev-artifacts/: CalamityAffixes.dll.disabled  _PUT_CalamityAffixes.dll_HERE.txt
skse/CalamityAffixes/include/: PrismaUI_API.h
skse/CalamityAffixes/include/CalamityAffixes/: AdaptiveElement.h  AffixRegistryState.h  AffixSpecialActionState.h  AffixToken.h  CombatContext.h  CombatRuntimeState.h  CorpseCurrencyPolicy.h  CorpseCurrencyRewardPolicy.h  CorpseExplosionSelectionPolicy.h  EventBridge.h  EventNames.h  HitDataUtil.h  Hooks.h  InstanceAffixSlots.h  InstanceKeyTransferPolicy.h  InstanceStateKey.h  ItemSubtypePolicy.h  LootCurrencyLedger.h  LootCurrencySourceHelpers.h  LootEligibility.h  LootRerollGuard.h  LootRollSelection.h  LootRuntimeState.h  LootShuffleBagState.h  LootSlotSanitizer.h  LootUiGuards.h  LowHealthTriggerSnapshot.h  MagnitudeScaling.h  NonHostileFirstHitGate.h  Papyrus.h  PerTargetCooldownStore.h  PlayerOwnership.h  PluginLogging.h  PointerSafety.h  PrismaLayoutPersistence.h  PrismaTooltip.h  ProcChanceUtil.h  ProcFeedback.h  ResyncScheduler.h  RunewordContractSnapshot.h  (+13 more)
skse/CalamityAffixes/include/CalamityAffixes/detail/: EventBridge.Constants.inl  EventBridge.PrivateApi.inl  EventBridge.PublicApi.inl  EventBridge.StateGroups.inl  EventBridge.Types.inl
skse/CalamityAffixes/src/: EventBridge.Actions.Archmage.cpp  EventBridge.Actions.Cast.cpp  EventBridge.Actions.Corpse.cpp  EventBridge.Actions.Dispatch.cpp  EventBridge.Actions.Feedback.cpp  EventBridge.Actions.Special.cpp  EventBridge.Actions.Trap.cpp  EventBridge.Actions.TrapFeedback.cpp  EventBridge.Actions.cpp  EventBridge.Config.AffixActionParsing.cpp  EventBridge.Config.AffixParsing.cpp  EventBridge.Config.AffixRegistry.cpp  EventBridge.Config.AffixTriggerParsing.cpp  EventBridge.Config.Indexing.cpp  EventBridge.Config.IndexingShared.cpp  EventBridge.Config.LoadPipeline.cpp  EventBridge.Config.LootPools.cpp  EventBridge.Config.LootRuntime.cpp  EventBridge.Config.Reset.cpp  EventBridge.Config.RunewordSynthesis.SpellSet.cpp  EventBridge.Config.RunewordSynthesis.SpellSet.h  EventBridge.Config.RunewordSynthesis.Style.cpp  EventBridge.Config.RunewordSynthesis.StyleExecution.cpp  EventBridge.Config.RunewordSynthesis.StyleSelection.cpp  EventBridge.Config.RunewordSynthesis.cpp  EventBridge.Config.RuntimeSettings.cpp  EventBridge.Config.Shared.h  EventBridge.Config.cpp  EventBridge.Loot.AffixSlotRoll.cpp  EventBridge.Loot.Assign.cpp  EventBridge.Loot.PreviewClaimStore.cpp  EventBridge.Loot.Runeword.BaseSelection.cpp  EventBridge.Loot.Runeword.Catalog.cpp  EventBridge.Loot.Runeword.Crafting.cpp  EventBridge.Loot.Runeword.Detail.cpp  EventBridge.Loot.Runeword.Detail.h  EventBridge.Loot.Runeword.PanelState.cpp  EventBridge.Loot.Runeword.Policy.cpp  EventBridge.Loot.Runeword.RecipeEntries.cpp  EventBridge.Loot.Runeword.RecipeUi.cpp  (+54 more)
skse/CalamityAffixes/tests/: CMakeLists.txt  bench_core_ops.cpp  run_runtime_gate_store_checks.sh  runtime_gate_store_checks.cpp  runtime_gate_store_checks_common.h  runtime_gate_store_checks_loot_policy.cpp  runtime_gate_store_checks_main.cpp  runtime_gate_store_checks_runeword_policy.cpp  runtime_gate_store_checks_runtime.cpp  runtime_gate_store_checks_settings_policy.cpp  runtime_gate_store_checks_stateful.cpp  test_adaptive_element.cpp  test_affix_token.cpp  test_corpse_explosion_selection.cpp  test_editor_id_safety.cpp  test_effective_loot_weight.cpp  test_instance_affix_slots.cpp  test_instance_key_transfer_policy.cpp  test_instance_state_key.cpp  test_item_subtype_policy.cpp  test_loot_eligibility.cpp  test_loot_reroll_guard.cpp  test_loot_roll_distribution.cpp  test_loot_ui_guards.cpp  test_magnitude_scaling.cpp  test_non_hostile_first_hit_gate.cpp  test_per_target_cooldown_store.cpp  test_pointer_safety.cpp  test_reforge_rules.cpp  test_resync_scheduler.cpp  test_runeword_util.cpp  test_suffix_family_selection.cpp  test_trigger_guards.cpp
tools/: AGENTS.md  CalamityAffixes.Tools.sln  affix_validation_contract.json  build_mo2_zip.sh  build_user_patch.sh  build_user_patch_wizard.cmd  build_user_patch_wizard.ps1  compile_papyrus.sh  compose_affixes.py  ensure_skse_build.py  extract_esp_allocation_fixture.py  gen_prefix_doc.py  gen_runeword_doc.py  gen_suffix_doc.py  improve_runeword_descriptions.py  lint_affixes.py  path_helpers.sh  qa_skse_logcheck.py  release_build.py  release_verify.sh  repo_paths.py  rewrite_affix_descriptions.py  transform_prefixes.py  transform_suffixes.py  update_docs.py  verify_mo2_zip.py  verify_runtime_contract_sync.py  wb_compat_check.py
(+247 files in other folders)
